--- a/jquery.html
+++ b/jquery.html
@@ -10,7 +10,21 @@
     <link rel="stylesheet" href="./css/style-form.css">
 </head>
 <body>
-    
+<aside style="position: fixed; top: 50%;padding: 5px">
+    <p>
+        Navigate
+    </p>
+    <ul >
+        <li><a href="./index.html">Main</a></li>
+        <li><a href="./page-css.html">css</a></li>
+        <li><a href="./page-bootstrap.html">bootstrap</a></li>
+        <li><a href="./css-position.html">position</a></li>
+        <li><a href="./animation.html">animation</a></li>
+        <li><a href="./html-tag.html">tag</a></li>
+        <li><a href="./jquery.html">jquery</a></li>
+    </ul>
+
+</aside>
   <div class="form__container">
     <form action="#" method="" class="form__main">
       <input name="firstname" required type="text" id="name" placeholder="Ваше имя" data-bs-toggle="tooltip"
