--- a/animation.html
+++ b/animation.html
@@ -61,8 +61,22 @@
 
 
     </div>
- 
 
+    <aside style="position: fixed; top: 50%;padding: 5px">
+        <p>
+            Navigate
+        </p>
+        <ul >
+            <li><a href="./index.html">Main</a></li>
+            <li><a href="./page-css.html">css</a></li>
+            <li><a href="./page-bootstrap.html">bootstrap</a></li>
+            <li><a href="./css-position.html">position</a></li>
+            <li><a href="./animation.html">animation</a></li>
+            <li><a href="./html-tag.html">tag</a></li>
+            <li><a href="./jquery.html">jquery</a></li>
+        </ul>
+
+    </aside>
     <script src="./js/wow.js"></script>
     <script>
         new WOW().init();
