--- a/html-tag.html
+++ b/html-tag.html
@@ -11,6 +11,21 @@
 </head>
 
 <body>
+<aside style="position: fixed; top: 50%;padding: 5px">
+    <p>
+        Navigate
+    </p>
+    <ul >
+        <li><a href="./index.html">Main</a></li>
+        <li><a href="./page-css.html">css</a></li>
+        <li><a href="./page-bootstrap.html">bootstrap</a></li>
+        <li><a href="./css-position.html">position</a></li>
+        <li><a href="./animation.html">animation</a></li>
+        <li><a href="./html-tag.html">tag</a></li>
+        <li><a href="./jquery.html">jquery</a></li>
+    </ul>
+
+</aside>
     <section class="tags">
         <div class="container">
             <div class="capture">
