--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
     <main>
         <section class="first-screen">
             <div class="first-screen__banner">
@@ -150,7 +151,20 @@
             </div>
         </section>
 
-
+    <aside style="position: fixed; top: 50%;padding: 5px">
+        <p>
+            Navigate
+        </p>
+        <ul >
+            <li><a href="./index.html">Main</a></li>
+            <li><a href="./page-css.html">css</a></li>
+            <li><a href="./page-bootstrap.html">bootstrap</a></li>
+            <li><a href="./css-position.html">position</a></li>
+            <li><a href="./animation.html">animation</a></li>
+            <li><a href="./html-tag.html">tag</a></li>
+            <li><a href="./jquery.html">jquery</a></li>
+        </ul>
+    </aside>
     </main>
 
 </body>
